--- a/assets/css/skills.css
+++ b/assets/css/skills.css
@@ -62,6 +62,7 @@
 
 .skills-grid-technologie img:hover{
     transform: scale(1);
+    cursor: pointer;
 }
 
 @media (max-width:1366px) {
@@ -74,12 +75,6 @@
     #skills{
         padding: 96px 0px;
     }
-}
-
-@media (max-width:1024px) {
-    /* .skills-technologie-container{
-        grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
-    } */
 }
 
 @media (max-width:768px) {
