Modification des css et en index.html

--- a/assets/css/contact.css
+++ b/assets/css/contact.css
@@ -127,7 +127,9 @@ footer p span{
     color: #EF4444;
 }
 
-
+footer span{
+    margin: 0 2px 0 2px;
+}
 @media (max-width:768px) {
     #contact {
         padding: 64px 0px;
