--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -99,7 +99,6 @@ header nav{
     width: 100%;
 }
 
-
 .action{
     display: flex;
     align-items: center;
@@ -182,6 +181,7 @@ header nav{
         display: block;
         position: relative;
         z-index: 20;
+        cursor: pointer;
     }   
 
     .logo{
