--- a/assets/css/work.css
+++ b/assets/css/work.css
@@ -55,6 +55,12 @@
     font-size: 14px;
     line-height: 20px; 
     color: #D1D5DB;
+    transition: 0.3s;
+    cursor: pointer;
+}
+
+.work-expertise:hover{
+    padding: 4px 25px;
 }
 
 .work-photos {
