--- a/assets/css/work.css
+++ b/assets/css/work.css
@@ -21,7 +21,9 @@
     font-size: 20px;
     line-height: 28px;
     text-align: center;
-    margin-top: 16px;
+    margin-top: 16px!important;
+    max-width: 70%;
+    margin: auto;
 }
 
 .work-container{
