--- a/assets/css/work.css
+++ b/assets/css/work.css
@@ -1,6 +1,7 @@
-#work{
+
+#work {
     padding: 96px 80px;
-    background-color: #111827;;
+    background-color: #111827;
 }
 
 .work-head{
@@ -62,7 +63,8 @@
 }
 
 .work-expertise:hover{
-    padding: 4px 25px;
+    /* padding: 4px 25px; */
+    transform: scaleX(1.1);
 }
 
 .work-photos {
